[gd_scene load_steps=4 format=3 uid="uid://dwb8dtch26pml"]

[ext_resource type="Script" uid="uid://cqa0rfinpbomr" path="res://GraphNodeGynth/GNG_Main.gd" id="1_nq3bi"]
[ext_resource type="PackedScene" uid="uid://c7xjwuufe2foh" path="res://GraphNodeGynth/SynthNodes/Oscillator.tscn" id="2_nq3bi"]
[ext_resource type="PackedScene" uid="uid://cpwg1xuhcnemu" path="res://GraphNodeGynth/SynthNodes/AudioOut.tscn" id="3_ml4d7"]

[node name="Control" type="Control" node_paths=PackedStringArray("graph")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nq3bi")
graph = NodePath("VBoxContainer/GraphEdit")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AddNodeButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "ADD NODE +"

[node name="GraphEdit" type="GraphEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
right_disconnects = true

[node name="SynthNodeOscillator" parent="VBoxContainer/GraphEdit" instance=ExtResource("2_nq3bi")]
layout_mode = 0
offset_left = 134.0
offset_top = 509.0
offset_right = 418.0
offset_bottom = 680.0
mouse_filter = 1
position_offset = Vector2(134, 509)

[node name="SynthNodeOscillator2" parent="VBoxContainer/GraphEdit" instance=ExtResource("2_nq3bi")]
layout_mode = 0
offset_left = 31.0
offset_top = 252.0
offset_right = 315.0
offset_bottom = 423.0
mouse_filter = 1
position_offset = Vector2(31, 252)

[node name="AudioOut" parent="VBoxContainer/GraphEdit" instance=ExtResource("3_ml4d7")]
layout_mode = 0
offset_left = 605.0
offset_top = 303.0
offset_right = 902.0
offset_bottom = 455.0
mouse_filter = 1
position_offset = Vector2(605, 303)

[node name="AudioOut2" parent="VBoxContainer/GraphEdit" instance=ExtResource("3_ml4d7")]
layout_mode = 0
offset_left = 607.0
offset_top = 85.0
offset_right = 904.0
offset_bottom = 237.0
mouse_filter = 1
position_offset = Vector2(607, 85)

[connection signal="pressed" from="VBoxContainer/HBoxContainer/AddNodeButton" to="." method="_on_add_node_button_pressed"]
[connection signal="connection_request" from="VBoxContainer/GraphEdit" to="." method="_on_graph_edit_connection_request"]
[connection signal="disconnection_request" from="VBoxContainer/GraphEdit" to="." method="_on_graph_edit_disconnection_request"]
[connection signal="visibility_changed" from="VBoxContainer/GraphEdit" to="." method="_on_graph_edit_visibility_changed"]
